Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-39722

bytes_written stat is not updated

    XMLWordPrintable

Details

    Description

      During testing with Prometheus Timofey Barmin identified that the "bytes_written" stat stays at zero. On current master, this is also the case when exposed over CMD_STAT; a cursory search of the code suggests that nothing updates thread_stats.bytes_written.

      Timofey Barmin noted that 6.5.0 is not affected.

      It's possible that this is accidental or that this stat is intentionally no longer tracked.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              james.harrison James Harrison (Inactive)
              james.harrison James Harrison (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty