MB-39722: Update bytes_read/written

As part of moving to bufferevent the two methods reading and
writing bytes to the socket was removed and updating the
global counters got lost.

Change-Id: Ica9e2b1fa206fba1f959f31c13c253e5fa6c9fe0
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/142810
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Paolo Cocchi <paolo.cocchi@couchbase.com>